# ODBC_ConnectionPy

./: 002.bat  connect.py  pyproject.toml
